i just hit a lick wit the box, had to put the stick in the box