@@ -38,7 +38,6 @@ import lombok.experimental.Accessors;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 @Accessors(fluent = true, chain = true)
@@ -61,15 +60,10 @@ public class DikeVeinGenerator extends VeinGenerator {
     }
 
     @Override
-    public List<Map.Entry<Either<BlockState, Material>, Integer>> getAllEntries() {
+    public List<VeinEntry> getAllEntries() {
         return this.blocks.stream()
-                .flatMap(definition -> definition.block.map(
-                        state -> state.stream()
-                                .map(target -> Map.entry(Either.<BlockState, Material>left(target.state),
-                                        definition.weight)),
-                        material -> Stream
-                                .of(Map.entry(Either.<BlockState, Material>right(material), definition.weight))))
-                .collect(Collectors.toList());
+                .flatMap(DikeBlockDefinition::asEntries)
+                .toList();
     }
 
     @Override
@@ -183,8 +177,7 @@ public class DikeVeinGenerator extends VeinGenerator {
         return this;
     }
 
-    public record DikeBlockDefinition(Either<List<TargetBlockState>, Material> block, int weight,
-                                      int minY, int maxY) {
+    public record DikeBlockDefinition(Either<List<TargetBlockState>, Material> block, int weight, int minY, int maxY) {
 
         public static final Codec<DikeBlockDefinition> CODEC = RecordCodecBuilder.create(instance -> instance.group(
                 Codec.either(TargetBlockState.CODEC.listOf(), GTCEuAPI.materialManager.codec()).fieldOf("block")
@@ -200,6 +193,11 @@ public class DikeVeinGenerator extends VeinGenerator {
 
         public DikeBlockDefinition(List<TargetBlockState> block, int weight, int minY, int maxY) {
             this(Either.left(block), weight, minY, maxY);
+        }
+
+        public Stream<VeinEntry> asEntries() {
+            return VeinGenerator.mapTarget(block)
+                    .map(entry -> new VeinEntry(entry, weight));
         }
     }
 }
